--- a/ASFT/ASFT.Android/Properties/AndroidManifest.xml
+++ b/ASFT/ASFT.Android/Properties/AndroidManifest.xml
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.asft.event" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="19" />
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <application android:label="ASFT Event" android:icon="@drawable/splash">
+  <!-- Put your Google Maps V2 API Key here. -->
+  <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBVXYg2PlfqfTM3iTsXvyaaGD7bwyIDTGI" />
+  <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+  </application>
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CAMERA" />
-	<application android:label="ASFT Event" android:icon="@drawable/splash"></application>
 </manifest>
