Images now works again, still need to work on PreviewImage Command

--- a/ASFT/ASFT.Android/ASFT.Android.csproj
+++ b/ASFT/ASFT.Android/ASFT.Android.csproj
@@ -371,5 +371,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\Values\Styles.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\file_paths.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
