--- a/ASFT/ASFT.Android/ASFT.Android.csproj
+++ b/ASFT/ASFT.Android/ASFT.Android.csproj
@@ -56,6 +56,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.1</Version>
     </PackageReference>
+    <PackageReference Include="TK.CustomMap">
+      <Version>2.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.1.1</Version>
     </PackageReference>
@@ -78,7 +81,6 @@
   <ItemGroup>
     <Compile Include="ImageReziser.cs" />
     <Compile Include="MainActivity.cs" />
-    <Compile Include="ExtendedMapRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="SplashScreen.cs" />
