--- a/ASFT/ASFT/ASFT.csproj
+++ b/ASFT/ASFT/ASFT.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
     <PackageReference Include="FreshMvvm" Version="2.2.4" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="TK.CustomMap" Version="2.0.1" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.1.1" />
     <PackageReference Include="Xam.Plugin.Geolocator" Version="4.2.0" />
     <PackageReference Include="Xam.Plugin.Media" Version="3.1.3" />
