Added IssueList and IssueListPageModel

--- a/ASFT/ASFT.Android/ASFT.Android.csproj
+++ b/ASFT/ASFT.Android/ASFT.Android.csproj
@@ -376,5 +376,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\xml\file_paths.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\drawable\statusDone.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
