Implemented Fody.PropertyChanged Nugget to drastically reduce boiler plate and re-added the iOS project.

--- a/ASFT/ASFT.iOS/Info.plist
+++ b/ASFT/ASFT.iOS/Info.plist
@@ -50,5 +50,7 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>ASFT</string>
+	<key>UIMainStoryboardFile</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
