--- a/ASFT/ASFT.iOS/ASFT.iOS.csproj
+++ b/ASFT/ASFT.iOS/ASFT.iOS.csproj
@@ -122,6 +122,9 @@
     <PackageReference Include="TK.CustomMap">
       <Version>2.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Behaviors">
+      <Version>1.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.1.1</Version>
     </PackageReference>
