--- a/ASFT/ASFT/ASFT.csproj
+++ b/ASFT/ASFT/ASFT.csproj
@@ -1,9 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
     <PackageReference Include="Fody" Version="3.0.1" />
@@ -11,25 +14,23 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="PropertyChanged.Fody" Version="2.4.0" />
     <PackageReference Include="TK.CustomMap" Version="2.0.1" />
+    <PackageReference Include="Xam.Behaviors" Version="1.0.1" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.1.1" />
     <PackageReference Include="Xam.Plugin.Geolocator" Version="4.2.0" />
     <PackageReference Include="Xam.Plugin.Media" Version="3.1.3" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.1.444934" />
     <PackageReference Include="Xamarin.Forms.Maps" Version="2.5.1.444934" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\Backend\DataTypes\DataTypes.csproj" />
     <ProjectReference Include="..\..\Backend\IssueManagerApiClient\IssueManagerApiClient.csproj" />
     <ProjectReference Include="..\..\Backend\ViewModels\IssueBase.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Reference Include="FreshMvvm">
       <HintPath>..\..\packages\FreshMvvm.2.2.4\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\FreshMvvm.dll</HintPath>
     </Reference>
   </ItemGroup>
-
   <ItemGroup>
     <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="App.xaml.cs">
       <DependentUpon>*.xaml</DependentUpon>
@@ -41,7 +42,6 @@
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Update="Pages\IssueListPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
